removed class name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
     </nav>
     <section class="influencer-journey">
-        <div class="influencer">
+        <div>
             <h1 class="influencer-title">Start your Journey as<br><span>Influencer</span></h1>
             <p class="influencer-description">Lorem ipsum dolor sit aget, consenter advising elia. Sem <br><span> vestibular sed scelerisque eros. Cetus facias.</span></p>
             <button class="influencer-btn"><a href="#">Pre-Book Now <i class="fa-solid fa-arrow-right"></i></a></button>
